@@ -1,5 +1,11 @@
 2003-01-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03641] Re: cleanup (don't close connection of news server)
+	* ftp.c (ftp_command): fix fwrite arg
+	* news.c (news_command): fix fwrite arg
+
+2003-01-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03640] Re: cleanup (don't close connection of news server)
 	* anchor.c (_put_ahchor_news): always conv_str
 		(_put_anchor_all): always conv_str
@@ -6460,4 +6466,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.681 2003/01/15 16:11:43 ukai Exp $
+$Id: ChangeLog,v 1.682 2003/01/15 16:14:40 ukai Exp $
